force-app/main/default/objects/simpli_lv__List_View_Action_Parameter__c/simpli_lv__List_View_Action_Parameter__c.object-meta.xml
<CustomObject>
    <label>List View Action Parameter</label>
    <nameField>
        <displayFormat>LVAP-{0}</displayFormat>
        <label>List View Action Parameter AutoNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>List View Action Parameters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>