force-app/main/default/objects/simpli_lv__List_View_Action_Parameter__c/fields/simpli_lv__Default_Value__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Default_Value__c</fullName>
    <description>The default value of the parameter.</description>
    <inlineHelpText>The default value of the parameter.</inlineHelpText>
    <label>Default Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>