force-app/main/default/objects/simpli_lv__List_View_Action_Parameter__c/fields/simpli_lv__Display_Order__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Display_Order__c</fullName>
    <description>Indicates in which order the parameters should be displayed. The value -1 represents a non-displayed parameter where the default value gets passed through for processing.</description>
    <inlineHelpText>Indicates in which order the parameters should be displayed. The value -1 represents a non-displayed parameter where the default value gets passed through for processing.</inlineHelpText>
    <label>Display Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>