force-app/main/default/objects/simpli_lv__List_View_Action_Parameter__c/fields/simpli_lv__Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Field_API_Name__c</fullName>
    <description>The API name of the field. This name must be unique within a given action.</description>
    <inlineHelpText>The API name of the field. This name must be unique within a given action.</inlineHelpText>
    <label>API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>