force-app/main/default/objects/simpli_lv__List_View_Action_Parameter__c/fields/simpli_lv__Label__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Label__c</fullName>
    <description>The parameter label that is displayed to the user when retrieving input values.</description>
    <inlineHelpText>The parameter label that is displayed to the user when retrieving input values.</inlineHelpText>
    <label>Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>