force-app/main/default/objects/simpli_lv__List_View_Action_Parameter__c/fields/simpli_lv__List_View_Action__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__List_View_Action__c</fullName>
    <description>The list view action that this parameter is associated with.</description>
    <inlineHelpText>The list view action that this parameter is associated with.</inlineHelpText>
    <label>List View Action</label>
    <referenceTo>simpli_lv__List_View_Action__c</referenceTo>
    <relationshipLabel>List View Action Parameters</relationshipLabel>
    <relationshipName>List_View_Action_Parameters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>