force-app/main/default/objects/simpli_lv__List_View_Action_Parameter__c/fields/simpli_lv__Lookup_Type__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Lookup_Type__c</fullName>
    <description>Indicates the type of the object being looked up to if this is a lookup field.</description>
    <label>Lookup Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>