force-app/main/default/objects/simpli_lv__List_View_Action_Parameter__c/fields/simpli_lv__Placeholder_Text__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Placeholder_Text__c</fullName>
    <label>Placeholder Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>