force-app/main/default/objects/simpli_lv__List_View_Action_Parameter__c/fields/simpli_lv__Type__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Type__c</fullName>
    <description>Indicates the type of the parameter being entered. This helps with identifying how the value is to be presented to the user.</description>
    <inlineHelpText>Indicates the type of the parameter being entered. This helps with identifying how the value is to be presented to the user.</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>boolean</fullName>
            </value>
            <value>
                <fullName>currency</fullName>
            </value>
            <value>
                <fullName>date</fullName>
            </value>
            <value>
                <fullName>datetime</fullName>
            </value>
            <value>
                <fullName>decimal</fullName>
            </value>
            <value>
                <fullName>double</fullName>
            </value>
            <value>
                <fullName>email</fullName>
            </value>
            <value>
                <fullName>integer</fullName>
            </value>
            <value>
                <fullName>lookup</fullName>
            </value>
            <value>
                <fullName>multipicklist</fullName>
            </value>
            <value>
                <fullName>percent</fullName>
            </value>
            <value>
                <fullName>phone</fullName>
            </value>
            <value>
                <fullName>picklist</fullName>
            </value>
            <value>
                <fullName>rich textarea</fullName>
            </value>
            <value>
                <fullName>string</fullName>
            </value>
            <value>
                <fullName>textarea</fullName>
            </value>
            <value>
                <fullName>time</fullName>
            </value>
            <value>
                <fullName>url</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>