force-app/main/default/objects/simpli_lv__List_View_Action_Parameter__c/listViews/simpli_lv__All.listView-meta.xml
<ListView>
    <fullName>simpli_lv__All</fullName>
    <columns>NAME</columns>
    <columns>simpli_lv__Field_API_Name__c</columns>
    <columns>simpli_lv__Label__c</columns>
    <columns>simpli_lv__List_View_Action__c</columns>
    <columns>simpli_lv__Type__c</columns>
    <columns>simpli_lv__Display_Order__c</columns>
    <columns>simpli_lv__Default_Value__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>